<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016-2017.
  ~ KewenC 版权所有
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kewenc.noti.activity.UseActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_use"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="使用说明"
            app:titleTextColor="@color/font_white">
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="16dp">
            <TextView
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q0"
                android:textSize="16sp"
                android:textColor="@color/color_blue"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#888"
                android:text="@string/a0"
                android:textSize="14sp"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:lineSpacingMultiplier="1.2"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:drawable/list_selector_background"></View>
            <TextView
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q1"
            android:textSize="16sp"
            android:textColor="@color/color_blue"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#888"
                android:text="@string/a1"
                android:textSize="14sp"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:lineSpacingMultiplier="1.2"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:drawable/list_selector_background"></View>
            <TextView
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q2"
            android:textSize="16sp"
            android:textColor="@color/color_blue"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#888"
                android:text="@string/a2"
                android:textSize="14sp"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:lineSpacingMultiplier="1.2"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:drawable/list_selector_background"></View>
            <TextView
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q3"
            android:textSize="16sp"
            android:textColor="@color/color_blue"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#888"
                android:text="@string/a3"
                android:textSize="14sp"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:lineSpacingMultiplier="1.2"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:drawable/list_selector_background"></View>
            <TextView
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q4"
            android:textSize="16sp"
            android:textColor="@color/color_blue"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#888"
                android:text="@string/a4"
                android:textSize="14sp"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:lineSpacingMultiplier="1.2"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:drawable/list_selector_background"></View>
            <TextView
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q5"
            android:textSize="16sp"
            android:textColor="@color/color_blue"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#888"
                android:text="@string/a5"
                android:textSize="14sp"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:lineSpacingMultiplier="1.2"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:drawable/list_selector_background"></View>
            <TextView
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q6"
                android:textSize="16sp"
                android:textColor="@color/color_blue"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#888"
                android:text="@string/a6"
                android:textSize="14sp"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:lineSpacingMultiplier="1.2"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
