<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_create"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kewenc.noti.activity.CreateActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="创建单词"
                android:textColor="#fff"
                android:layout_gravity="center"
                android:textSize="16sp"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">
            <RelativeLayout
                android:id="@+id/rl_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputLayout
                android:id="@+id/til1_create"
                    android:layout_toLeftOf="@+id/ib"
                    android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                    <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/acet_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/word"
                    android:lines="1"/>
                </android.support.design.widget.TextInputLayout>
            <android.support.v7.widget.AppCompatImageView
                android:padding="8dp"
                android:id="@+id/ib"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_search"
                android:background="@drawable/touch"/>
            </RelativeLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/rl_word"
        android:id="@+id/til2_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/acet_marken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/marken"
            android:lines="1"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/til2_create"
        android:id="@+id/til3_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/acet_markus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/marken"
            android:lines="1"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
                android:layout_below="@+id/til3_create"
                android:id="@+id/til4_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/acet_translate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/translate"/>
            </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/sure"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/til4_create"
        android:id="@+id/btn_sure_create"
        android:text="确定"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"/>
    <Button
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/exit"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/btn_sure_create"
        android:id="@+id/btn_cancel_create"
        android:text="返回"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"/>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
